# vodu

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package.json
server/: README.md  client.ts  controller.ts  core.ts  index.ts  storage.ts  types.ts  utils.ts
src/: main.cpp  network.cpp  network.h  settings.cpp  settings.h  utils.cpp  utils.h
src/platform/: platformApi.h
src/platform/linux/: platformApi.cpp
src/platform/windows/: platformApi.cpp
voduclient/: Cargo.toml
voduclient/src/: capturer.rs  main.rs
